@@ -1,3 +1,7 @@
+*SVN*
+
+* Refactored insert code in Postgres adapter in preparation for solving lastval() for pre-8.1 versions of Postgresql.
+
 *0.0.7*
 
 * Fixed bug in Model.schema, duh!
